add local files to avoid external urls